--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>one point one</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -51,4 +51,5 @@
   当然，你也可以前来访问:_______________<!--联系管理员--------------------------------------->
 </footer>
 </body>
+
 </html>
