--- a/index.html
+++ b/index.html
@@ -1,118 +1,148 @@
 <!DOCTYPE html>
-
 <html lang="zh-Hans-CN">
-
 <head>    
-
 <meta charset="UTF-8">    
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-
 <title>one point one</title>    
-
-<link rel="stylesheet" type="text/css" href="style.css">
-
+<link rel="shortcut icon" href=" favicon.ico" />
+ 
 </head>
 
-<body>
 
-<h1>One Point One</h1>
 
-<menu>
-
-<li><button onclick="copy()">复制</button></li>
- 
-<li><button onclick="cut()">剪切</button></li>
-  
-<li><button onclick="paste()">粘贴</button></li>
-
-</menu>
-
-<ul>
-
-</ul>
-
-<aside><!--News------------------------------------------------------------------------->
-
-<p><strong>上一次更新:<em>二零二五年八月七日22:18  2025,August,7th 22:18</em></strong></p>
-
-<p>更新历史:</p>
-
-<ul>  
-
-<li><data value="20250807221801">开始建立</data></li>  
-
-<li><data value="20250808210502">搭建框架</data></li>
-
-<li><date value="20250809220303">上传至Github</date></li>
-
-<li><date value="20250811171904">第一次更新</date></li>
-</ul>
-
-</aside><!--News------------------------------------------------------------------------->
+<body onload="showTime()">
+<strong></strong><h1>One Point One</h1></strong>
 
 <details><!--进站须知--------------------------------------------------------------------->  
-
 <summary>进站须知：</summary>  
-
 <p>
-  
-此网站由于还有很多的不足之处，如排版等，所以如有建议请至页尾“关于BUG”一栏中反馈问题与建议(‾◡◝)感谢支持(‾◡◝)(‾◡◝)(‾◡◝)  
-
+  此网站由于还有很多的不足之处，如排版等，所以如有建议请至页尾“关于BUG”一栏中反馈问题与建议(‾◡◝)感谢支持(‾◡◝)(‾◡◝)(‾◡◝)  
 </p>
-
 </details><!--进站须知-------------------------------------------------------------------->
 
-<hr><!--没用的按钮------------------------------------------------------------------------>
+<hr>
+<hr>
 
-<button name="button"><strong>（没用的按钮）🗨️</strong></button>
-    
-<hr><!--没用的按钮------------------------------------------------------------------------>
+<h2>计时功能</h2>
+<script>
+var second = 0; // 初始化秒数
+var clock; // 计时器变量
+function resetTimer() {
+clearInterval(clock); // 清除计时器
+second = 0; // 重置秒数
+document.getElementById('timeValue').value = second + '秒';
+}
+function startTimer() {
+clock = setInterval(timer, 1000); // 每秒调用一次timer函数
+}
+function stopTimer() {
+clearInterval(clock); // 停止计时
+document.getElementById('timeValue').value = second + '秒';
+}
+function timer() {
+second++; // 增加秒数
+document.getElementById('timeValue').value = second + '秒';
+}
+</script>
+</head>
+<body>
+<div style="text-align: center">
+<input type="text" id="timeValue" value="0秒" readonly><br>
+<button type="button" onclick="startTimer()">开始</button>
+<button type="button" onclick="stopTimer()">暂停</button>
+<button type="button" onclick="resetTimer()">重置</button>
+</div>
+
+
+<em>
+<script>
+Date.prototype.format = function(fmt) {
+var o = {
+"y+": this.getFullYear(),
+"M+": this.getMonth() + 1,
+"d+": this.getDate(),
+"h+": this.getHours(),
+"m+": this.getMinutes(),
+"s+": this.getSeconds()
+};
+if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+for (var k in o)
+if (new RegExp("(" + k + ")").test(fmt))
+fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+return fmt;
+}
+function showTime() {
+var now = new Date();
+var timeString = now.format("yyyy-MM-dd hh:mm:ss");
+document.getElementById("datetime").innerHTML = timeString;
+}
+setInterval(showTime, 1000);
+</script>
+
+<div id="datetime"></div>
+
+<button name="button" type="button" onclick="alert('哈喽！🆒')"><strong>（没用的按钮）🗨️</strong></button>
+<p id="demo">点击我.</p>
+<script>
+document.getElementById("demo").addEventListener("click", myFunction);
+function myFunction() {
+  document.getElementById("demo").innerHTML = "YOU CLICKED ME!";
+}
+</script></em>
+
+
+<menu>
+  <li><button onclick="copy()">复制</button></li>
+  <li><button onclick="cut()">剪切</button></li>
+  <li><button onclick="paste()">粘贴</button></li>
+</menu>favicon
+
+<ul>
+</ul>
+<aside><!--News------------------------------------------------------------------------->
+<p><strong>上一次更新:<em>二零二五年八月七日22:18  2025,August,7th 22:18</em></strong></p>
+<p>更新历史:</p>
+<ul>  
+<li><data value="20250807221801">开始建立</data></li>  
+<li><data value="20250808210502">搭建框架</data></li>
+<li><date value="20250809220303">上传至Github</date></li>
+</ul>
+</aside><!--News------------------------------------------------------------------------->
+
+<hr>
 
 <label for="选择你的昵称">选择你的昵称:</label><!--昵称选项--------------------------------->
-
 <input list="ice-cream-flavors" id="ice-cream-choice" name="ice-cream-choice" />
-
 <datalist id="ice-cream-flavors">  
-
 <option value="访问人"></option>  
-
-<option value="visiter"></option>  
-
-<option value="fangwenren"></option>  
-
-<option value="FWR"></option>  
-
+<option value="Interviewer"></option>  
+<option value="FǎngWènZhě"></option>  
 <option value="访问者"></option>
-
+<option value="Visitor"></option>
+<option value="FWR"></option>
+<option value="訪問人"></option>
+<option value="訪問者"></option>
+<option value="Besucher"></option>
+<option value="Posetilac"></option>
+<option value="Επισκέπτης"></option>
+<option value="Ερευνητή"></option>
+<option value="مرکه کوونکی"></option>
+<option value="འཚམས་འདྲི་བྱེད་མཁན།"></option>
+<option value="Spyrill"></option>
+<option value="Penemuduga"></option>
+<option value="Penginterviu"></option>
+<option value="Intervistatore"></option>
+<option value="Интервьюер"></option>
+<option value="Tazatel"></option>
 </datalist><!--昵称选项------------------------------------------------------------------->
-
 <footer>  
-
 <hr><!--联系管理员---------------------------------------------------------------------->  
-
 <address> 
-
 <b>关于BUG:</b>
- 
-你可以通过  
-
-<a href="#">#</a><br/>
- 
-与作者联系。如果你发现了任何错误，请
-
-<a href="mailto:chat.our@outlook.com"    
-
->联系网站管理员</a  
-
->。<br />
- 
-当然，你也可以前来访问:_______________<!--联系管理员--------------------------------------->
-
+如果你发现了任何错误,你可以通过
+<a href="mailto:chat.our@outlook.com">管理员邮箱</a><br/>与作者联系。
+</a  >。<br /><!--联系管理员--------------------------------------->
 </footer>
-
 </body>
 
 </html>
-
-
