--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
 <hr>
 <hr>
 
+ <label for="选择你的昵称">选择你的昵称:</label><!--昵称选项--------------------------------->
+<input list="ice-cream-flavors" id="ice-cream-choice" name="ice-cream-choice" />
+<datalist id="ice-cream-flavors">  
+<option value="访问人"></option>  
+<option value="Interviewer"></option>  
+<option value="FǎngWènZhě"></option>  
+<option value="访问者"></option>
+<option value="Visitor"></option>
+<option value="FWR"></option>
+<option value="訪問人"></option>
+<option value="訪問者"></option>
+<option value="Besucher"></option>
+<option value="Posetilac"></option>
+<option value="Επισκέπτης"></option>
+<option value="Ερευνητή"></option>
+<option value="مرکه کوونکی"></option>
+<option value="འཚམས་འདྲི་བྱེད་མཁན།"></option>
+<option value="Spyrill"></option>
+<option value="Penemuduga"></option>
+<option value="Penginterviu"></option>
+<option value="Intervistatore"></option>
+<option value="Интервьюер"></option>
+<option value="Tazatel"></option>
+</datalist><!--昵称选项------------------------------------------------------------------->
+
 <h2>计时功能</h2>
 <script>
 var second = 0; // 初始化秒数
@@ -88,51 +113,10 @@ document.getElementById("demo").addEventListener("click", myFunction);
 function myFunction() {
   document.getElementById("demo").innerHTML = "YOU CLICKED ME!";
 }
-</script></em>
-
-
-<menu>
-  <li><button onclick="copy()">复制</button></li>
-  <li><button onclick="cut()">剪切</button></li>
-  <li><button onclick="paste()">粘贴</button></li>
-</menu>favicon
-
-<aside><!--News------------------------------------------------------------------------->
-<p><strong>上一次更新:<em>二零二五年八月七日22:18  2025,August,7th 22:18</em></strong></p>
-<p>更新历史:</p>
-<ul>  
-<li><data value="20250807221801">开始建立</data></li>  
-<li><data value="20250808210502">搭建框架</data></li>
-<li><date value="20250809220303">上传至Github</date></li>
-</ul>
-</aside><!--News------------------------------------------------------------------------->
+</script>
 
 <hr>
 
-<label for="选择你的昵称">选择你的昵称:</label><!--昵称选项--------------------------------->
-<input list="ice-cream-flavors" id="ice-cream-choice" name="ice-cream-choice" />
-<datalist id="ice-cream-flavors">  
-<option value="访问人"></option>  
-<option value="Interviewer"></option>  
-<option value="FǎngWènZhě"></option>  
-<option value="访问者"></option>
-<option value="Visitor"></option>
-<option value="FWR"></option>
-<option value="訪問人"></option>
-<option value="訪問者"></option>
-<option value="Besucher"></option>
-<option value="Posetilac"></option>
-<option value="Επισκέπτης"></option>
-<option value="Ερευνητή"></option>
-<option value="مرکه کوونکی"></option>
-<option value="འཚམས་འདྲི་བྱེད་མཁན།"></option>
-<option value="Spyrill"></option>
-<option value="Penemuduga"></option>
-<option value="Penginterviu"></option>
-<option value="Intervistatore"></option>
-<option value="Интервьюер"></option>
-<option value="Tazatel"></option>
-</datalist><!--昵称选项------------------------------------------------------------------->
 <footer>  
 <hr><!--联系管理员---------------------------------------------------------------------->  
 <address> 
@@ -144,4 +128,5 @@ function myFunction() {
 </body>
 
 </html>
+
 
