--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <title>one point one</title>    
 <link rel="shortcut icon" href=" favicon.ico" />
+<link rel="stylesheet" href="styles.css">
  
 </head>
 
@@ -128,5 +129,6 @@ function myFunction() {
 </body>
 
 </html>
+
 
 
