--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 
 
-<body onload="showTime()">
-<strong></strong><h1>One Point One</h1></strong>
+<body>
+<h1>One Point One</h1>
 
 <details><!--进站须知--------------------------------------------------------------------->  
 <summary>进站须知：</summary>  
@@ -20,35 +20,6 @@
   此网站由于还有很多的不足之处，如排版等，所以如有建议请至页尾“关于BUG”一栏中反馈问题与建议(‾◡◝)感谢支持(‾◡◝)(‾◡◝)(‾◡◝)  
 </p>
 </details><!--进站须知-------------------------------------------------------------------->
-
-<hr>
-
- <label for="选择你的昵称">选择你的昵称:</label><!--昵称选项--------------------------------->
-<input list="ice-cream-flavors" id="ice-cream-choice" name="ice-cream-choice" />
-<datalist id="ice-cream-flavors">  
-<option value="访问人"></option>  
-<option value="Interviewer"></option>  
-<option value="FǎngWènZhě"></option>  
-<option value="访问者"></option>
-<option value="Visitor"></option>
-<option value="FWR"></option>
-<option value="訪問人"></option>
-<option value="訪問者"></option>
-<option value="Besucher"></option>
-<option value="Posetilac"></option>
-<option value="Επισκέπτης"></option>
-<option value="Ερευνητή"></option>
-<option value="مرکه کوونکی"></option>
-<option value="འཚམས་འདྲི་བྱེད་མཁན།"></option>
-<option value="Spyrill"></option>
-<option value="Penemuduga"></option>
-<option value="Penginterviu"></option>
-<option value="Intervistatore"></option>
-<option value="Интервьюер"></option>
-<option value="Tazatel"></option>
-</datalist><!--昵称选项------------------------------------------------------------------->
-
-
 
 <hr>
 
@@ -63,6 +34,7 @@
 </body>
 
 </html>
+
 
 
 
