--- a/index.html
+++ b/index.html
@@ -4,25 +4,18 @@
 <meta charset="UTF-8">    
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <title>one point one</title>    
-<link rel="shortcut icon" href=" favicon.ico" />
+<link rel="icon" href="favicon.ico" />
 <link rel="stylesheet" href="styles.css">
- 
 </head>
-
-
-
 <body>
 <h1>One Point One</h1>
-
+<hr>
 <details><!--进站须知--------------------------------------------------------------------->  
 <summary>进站须知：</summary>  
 <p>
   此网站由于还有很多的不足之处，如排版等，所以如有建议请至页尾“关于BUG”一栏中反馈问题与建议(‾◡◝)感谢支持(‾◡◝)(‾◡◝)(‾◡◝)  
 </p>
 </details><!--进站须知-------------------------------------------------------------------->
-
-<hr>
-
 <footer>  
 <hr><!--联系管理员---------------------------------------------------------------------->  
 <address> 
@@ -32,10 +25,4 @@
 </a  >。<br /><!--联系管理员--------------------------------------->
 </footer>
 </body>
-
 </html>
-
-
-
-
-
