--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <title>one point one</title>  
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="icon" href="photo/favicon.ico" type="image/x-icon">
+<link rel="icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
 <h2>全新的网站已经出现！！</h2>
 <strong><p>欢迎访问<a href="https://chenzi114514haha.github.io/one-point-one-website/">"One Point One"!</a></p></strong>
 <strong><em><blockquote>人生不是一种享乐，而是一桩十分沉重的工作。——<a href="#">列夫·托尔斯泰</a></blockquote></em></strong>
-<p><a href="#">了解更多</a></p>
+<p><a href="index-6">了解更多</a></p>
 </section>
 
 
@@ -78,5 +78,6 @@
 
 </footer>
 </body>
+
 
 </html>
