--- a/index.html
+++ b/index.html
@@ -44,13 +44,19 @@
 
 
 <section class="slogan">
-  <h2>论“他妈的！”</h2>
-  <p>
+
+</section>
+
+<section class="pinjia"><textarea name="textarea" rows="5" cols="30" minlength="10" maxlength="20">
+评论在这里
+</textarea>
+<textarea name="textarea" rows="5" cols="30" readonly>
+月读：《论“他妈的！”》
 无论是谁，只要在中国过活，便总得常听到“他妈的”或其相类的口头禅。我想：这话的分布，大概就跟着中国人足迹之所至罢；使用的遍数，怕也未必比客气的“您好呀”会更少。假使依或人所说，牡丹是中国的“国花”，那么，这就可以算是中国的“国骂”了。
-我生长于浙江之东，就是西滢先生之所谓“某籍”⑴。那地方通行的“国骂”却颇简单：专一以“妈”为限，决不牵涉余人。后来稍游各地，才始惊异于国骂之博大而精微：上溯祖宗，旁连姊妹，下递子孙，普及同性，真是“犹河汉而无极也”⑵。而且，不特用于人，也以施之兽。前年，曾见一辆煤车的只轮陷入很深的辙迹里，车夫便愤然跳下，出死力打那拉车的骡子道：“你姊姊的！你姊姊的！”
-别的国度里怎样，我不知道。单知道诺威人Hamsun⑶有一本小说叫《饥饿》，粗野的口吻是很多的，但我并不见这一类话。Gorky⑷所写的小说中多无赖汉，就我所看过的而言，也没有这骂法。惟独Artzybashev⑸在《工人绥惠略夫》里，却使无抵抗主义者亚拉借夫骂了一句“你妈的”。但其时他已经决计为爱而牺牲了，使我们也失却笑他自相矛盾的勇气。这骂的翻译，在中国原极容易的，别国却似乎为难，德文译本作“我使用过你的妈”，日文译本作“你的妈是我的母狗”。这实在太费解，——由我的眼光看起来。
-那么，俄国也有这类骂法的了，但因为究竟没有中国似的精博，所以光荣还得归到这边来。好在这究竟又并非什么大光荣，所以他们大约未必抗议；也不如“赤化”之可怕，中国的阔人，名人，高人，也不至于骇死的。但是，虽在中国，说的也独有所谓“下等人”，例如“车夫”之类，至于有身分的上等人，例如“士大夫”之类，则决不出之于口，更何况笔之于书。“予生也晚”，赶不上周朝，未为大夫，也没有做士，本可以放笔直干的，然而终于改头换面，从“国骂”上削去一个动词和一个名词，又改对称为第三人称者，恐怕还因为到底未曾拉车，因而也就不免“有点贵族气味”之故。那用途，既然只限于一部分，似乎又有些不能算作“国骂”了；但也不然，阔人所赏识的牡丹，下等人又何尝以为“花之富贵者也”⑹？
-这“他妈的”的由来以及始于何代，我也不明白。经史上所见骂人的话，无非是“役夫”⑺，“奴”，“死公”⑻；较厉害的，有“老狗”⑼，“貉子”⑽；更厉害，涉及先代的，也不外乎“而母婢也”⑾，“赘阉遗丑”⑿罢了！还没见过什么“妈的”怎样，虽然也许是士大夫讳而不录。但《广弘明集》⒀（七）记北魏邢子才“以为妇人不可保。谓元景曰，‘卿何必姓王？’元景变色。子才曰，‘我亦何必姓邢；能保五世耶？’”则颇有可以推见消息的地方。
+我生长于浙江之东，就是西滢先生之所谓“某籍”。那地方通行的“国骂”却颇简单：专一以“妈”为限，决不牵涉余人。后来稍游各地，才始惊异于国骂之博大而精微：上溯祖宗，旁连姊妹，下递子孙，普及同性，真是“犹河汉而无极也”。而且，不特用于人，也以施之兽。前年，曾见一辆煤车的只轮陷入很深的辙迹里，车夫便愤然跳下，出死力打那拉车的骡子道：“你姊姊的！你姊姊的！”
+别的国度里怎样，我不知道。单知道诺威人Hamsun有一本小说叫《饥饿》，粗野的口吻是很多的，但我并不见这一类话。Gorky所写的小说中多无赖汉，就我所看过的而言，也没有这骂法。惟独Artzybashev在《工人绥惠略夫》里，却使无抵抗主义者亚拉借夫骂了一句“你妈的”。但其时他已经决计为爱而牺牲了，使我们也失却笑他自相矛盾的勇气。这骂的翻译，在中国原极容易的，别国却似乎为难，德文译本作“我使用过你的妈”，日文译本作“你的妈是我的母狗”。这实在太费解，——由我的眼光看起来。
+那么，俄国也有这类骂法的了，但因为究竟没有中国似的精博，所以光荣还得归到这边来。好在这究竟又并非什么大光荣，所以他们大约未必抗议；也不如“赤化”之可怕，中国的阔人，名人，高人，也不至于骇死的。但是，虽在中国，说的也独有所谓“下等人”，例如“车夫”之类，至于有身分的上等人，例如“士大夫”之类，则决不出之于口，更何况笔之于书。“予生也晚”，赶不上周朝，未为大夫，也没有做士，本可以放笔直干的，然而终于改头换面，从“国骂”上削去一个动词和一个名词，又改对称为第三人称者，恐怕还因为到底未曾拉车，因而也就不免“有点贵族气味”之故。那用途，既然只限于一部分，似乎又有些不能算作“国骂”了；但也不然，阔人所赏识的牡丹，下等人又何尝以为“花之富贵者也”？
+这“他妈的”的由来以及始于何代，我也不明白。经史上所见骂人的话，无非是“役夫”⑺，“奴”，“死公”⑻；较厉害的，有“老狗”，“貉子”；更厉害，涉及先代的，也不外乎“而母婢也”，“赘阉遗丑”罢了！还没见过什么“妈的”怎样，虽然也许是士大夫讳而不录。但《广弘明集》（七）记北魏邢子才“以为妇人不可保。谓元景曰，‘卿何必姓王？’元景变色。子才曰，‘我亦何必姓邢；能保五世耶？’”则颇有可以推见消息的地方。
 晋朝已经是大重门第，重到过度了；华胄世业，子弟便易于得官；即使是一个酒囊饭袋，也还是不失为清品。北方疆土虽失于拓跋氏，士人却更其发狂似的讲究阀阅，区别等第，守护极严。庶民中纵有俊才，也不能和大姓比并。至于大姓，实不过承祖宗余荫，以旧业骄人，空腹高心，当然使人不耐。但士流既然用祖宗做护符，被压迫的庶民自然也就将他们的祖宗当作仇敌。邢子才的话虽然说不定是否出于愤激，但对于躲在门第下的男女，却确是一个致命的重伤。势位声气，本来仅靠了“祖宗”这惟一的护符而存，“祖宗”倘一被毁，便什么都倒败了。这是倚赖“余荫”的必得的果报。
 同一的意思，但没有邢子才的文才，而直出于“下等人”之口的，就是：“他妈的！”
 要攻击高门大族的坚固的旧堡垒，却去瞄准他的血统，在战略上，真可谓奇谲的了。最先发明这一句“他妈的”的人物，确要算一个天才，——然而是一个卑劣的天才。
@@ -59,14 +65,7 @@
 于是他们反抗了，曰：“他妈的！”
 但人们不能蔑弃扫荡人我的余泽和旧荫，而硬要去做别人的祖宗，无论如何，总是卑劣的事。有时，也或加暴力于所谓“他妈的”的生命上，但大概是乘机，而不是造运会，所以无论如何，也还是卑劣的事。
 中国人至今还有无数“等”，还是依赖门第，还是倚仗祖宗。倘不改造，即永远有无声的或有声的“国骂”。就是“他妈的”，围绕在上下和四旁，而且这还须在太平的时候。
-但偶尔也有例外的用法：或表惊异，或表感服。我曾在家乡看见乡农父子一同午饭，儿子指一碗菜向他父亲说：“这不坏，妈的你尝尝看！”那父亲回答道：“我不要吃。妈的你吃去罢！”则简直已经醇化为现在时行的“我的亲爱的”的意思了。  ————鲁迅</p>
-</section>
-
-<section class="pinjia"><textarea name="textarea" rows="5" cols="30" minlength="10" maxlength="20">
-评论在这里
-</textarea>
-<textarea name="textarea" rows="5" cols="30" readonly>
-阅读在这里
+但偶尔也有例外的用法：或表惊异，或表感服。我曾在家乡看见乡农父子一同午饭，儿子指一碗菜向他父亲说：“这不坏，妈的你尝尝看！”那父亲回答道：“我不要吃。妈的你吃去罢！”则简直已经醇化为现在时行的“我的亲爱的”的意思了。
 </textarea>
 </section>
 
@@ -98,4 +97,5 @@
 
 
 </html>
+
 
